# helppetai-website

./: .gitignore  5054dcbf-a107-45f7-9229-828acd7faa5e.m4a  AUTH_README.md  CLAUDE.md  INVITATION_SYSTEM_COMPLETE.md  README.md  STRIPE_INTEGRATION.md  create.sh  deploy.sh  package.json  task.md
backend/: .dockerignore  .gitignore  APPOINTMENTS_UNIX_DEPRECATION.md  DEPLOYMENT_READINESS.md  Dockerfile  EMAIL_SETUP.md  Makefile  README.md  UNIX_TIMESTAMP_REFACTOR_REPORT.md  alembic.ini  cal.ics  cloudformation.yaml  conftest.py  debug_queries.sql  env.template  fix_empty_license_numbers.sql  main.py  pyproject.toml  requirements.txt  run_timezone_tests.py  s3-cors-config.json  staff_review_recommendations.md  test_corrected_webhook.py  test_date_parsing_standalone.py  test_phone_integration.py  test_s3_integration.py  test_voice_agent_api.py  test_voice_agent_curl.sh
backend/alembic/: env.py
backend/alembic/versions/: 04240cf2bf54_create_visits_table_properly.py  095769440883_add_visits_table.py  14546ef74420_add_device_name_and_app_version_to_.py  1b232ec1215f_add_medical_records_table.py  1c30fd4a2aa5_add_device_tokens_table_for_push_.py  1e43ed585281_rename_admin_to_practice_admin.py  20265d085ccc_add_pets_table.py  2684c50d2e4a_drop_recordings_table.py  36c8dddcd0d7_add_survey_column_to_users.py  3e909653104d_initial_migration_with_users_practices_.py  4f5e6d7c8b9a_add_pending_invite_to_userrole.py  59035bb5b032_rename_metadata_to_additional_data.py  8efd67cd4a0a_add_caller_pet_owner_id_column_only.py  927f6fc5a84b_add_appointments_tables.py  a1b2c3d4e5f6_add_contact_forms_table.py  ac61e7d88beb_drop_unused_tables_appointments_unix_and_vet_availability.py  add_pet_id_to_recordings_and_appointment_id_to_visits.py  c2d3e4f5g6h7_add_scheduling_tables_only.py  cabc51edb8e7_add_specialties_field_to_veterinary_.py  d25030a63888_add_phone_number_to_voice_config.py  dda2f13772d2_add_timezone_to_veterinary_practices.py  e35dfc936408_add_practice_invitations_table.py  f1a2b3c4d5e6_add_recordings_table.py  f3717ef87724_add_unix_timestamp_scheduling_tables.py  f5c47625eb88_merge_heads.py  h7i8j9k0l1m2_fix_midnight_spanning_availability.py  i8j9k0l1m2n3_add_voice_config_table.py  j9k0l1m2n3o4_add_call_records_cache_table.py  k0l1m2n3o4p5_add_stripe_customer_table.py
backend/docs/: appointment_booking_api_schema.md  call_analysis_api.md  curl_commands.md  debug_tests.txt  design_decisions.md  first_available_appointments_api.md  flexible_scheduling_api.md  flexible_scheduling_curl_tests.md  flexible_scheduling_tests.txt  major_refactor.txt  models.sql  service.md  solution_2.md  suggestion.txt  system.puml  voice_agent_api.md
backend/docs/Issues/: book_feature.md  email_notification.md  multiple_pet_support.md  serious_issue.md  time_problem.md
backend/keys/: AuthKey_M8A86NFUK4.p8
backend/scripts/: configure-s3-cors.py  init_users.py  init_users_pg.py  init_users_rds.py  init_users_simple.py  migrate_users.py  run_curls.sh  setup-s3-cors.sh  setup_test_data.py
backend/src/: __init__.py  config.py  database.py  database_pg.py  main.py  main_pg.py
backend/src/auth/: jwt_auth.py  jwt_auth_pg.py
backend/src/models/: __init__.py  associations.py  auth_schemas.py  base.py  medical_record.py  medical_record_schemas.py  mongodb.py  pet.py  pet_owner.py  pet_owner_practice_association.py  practice.py  schemas.py  user.py  visit.py
backend/src/models_pg/: __init__.py  appointment.py  call_record.py  contact_form.py  device_token.py  medical_record.py  (+12 more)
backend/tests/: book_appointment_curl.txt  curls.txt  get_first_available_flexible.txt  test_appointment_conflict_bug.py  test_conflict_detection_integration.py  test_critical_timezone_bugs.py  test_date_parsing.py  test_phantom_availability_bug.py  test_scheduling_api_timezone.py  test_timezone_boundary_api_integration.py  test_timezone_boundary_core.py  test_timezone_boundary_scheduling.py  test_timezone_handling.py  test_utc_storage_verification.py
(+394 files in other folders)
